--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@ let state = {
     stocks: true,
     propertyEquity: true,
     fireTarget: true,
-    fireIncomeProxy: true,
+    passiveIncome: true,
     netRent: false,
     taxPaid: false,
 	
@@ -1416,12 +1416,17 @@ function renderResults(result){
     "Target_Monthly_Infl_Adj",
     "FIRE_Target"
   ]);
-  const fireIncomeProxyKey = findKey(cols, [
-    "FIRE_Income_Monthly",
-    "Fire_Replacement_Cashflow_Monthly",
-    "Passive_Income_Monthly",
-    "Passive_Income_Proxy_Monthly"
-  ]);
+	// Prefer REAL passive income series from backend
+	const passiveKey = findKey(cols, [
+	  "Passive_Income_Monthly",  // prefer true monthly if present
+	  "Passive_Income_Total"     // fallback if only yearly exists
+	]);
+	
+	// Keep FIRE proxy as fallback only
+	const fireIncomeProxyKey = passiveKey || findKey(cols, [
+	  "Fire_Replacement_Cashflow_Monthly",
+	  "FIRE_Income_Monthly"
+	]);
 
   // Debug series (optional)
   const netRentKey = findKey(cols, ["Total_Net_Rent","Total_Net_Rent_Monthly","Net_Rent_Total"]);
@@ -1458,6 +1463,17 @@ function renderResults(result){
 
   const seriesFromKey = (key) => rows.map(r => getFirstNumber(r, [key]));
 
+
+// ✅ Always plot monthly units on the chart.
+// If yearly backend gives an annual total, convert to monthly.
+const passiveIncomeSeries = fireIncomeProxyKey
+  ? seriesFromKey(fireIncomeProxyKey).map(v => {
+      return (fireIncomeProxyKey === "Passive_Income_Total") ? (v / 12) : v;
+    })
+  : null;
+
+
+
   const cashSeries   = seriesFromKey(cashKey);
   const stockSeries  = seriesFromKey(stockKey);
 
@@ -1477,9 +1493,16 @@ function renderResults(result){
   });
 
   const fireTargetSeries = fireTargetKey ? seriesFromKey(fireTargetKey) : null;
-  const fireIncomeProxySeries = fireIncomeProxyKey ? seriesFromKey(fireIncomeProxyKey) : null;
+  
   const netRentSeries = netRentKey ? seriesFromKey(netRentKey) : null;
   const taxSeries = taxKey ? seriesFromKey(taxKey) : null;
+
+	
+	const withdrawalsKey = findKey(cols, ["Withdrawals_Total","Withdrawals_Monthly"]);
+	const withdrawalsSeries = withdrawalsKey
+	  ? seriesFromKey(withdrawalsKey).map(v => (withdrawalsKey === "Withdrawals_Total" ? v / 12 : v))
+	  : null;
+
 
   // Registry of possible chart datasets
 	// Registry of possible chart datasets
@@ -1489,11 +1512,14 @@ function renderResults(result){
 	  { id:"stocks", label:"Stocks", axis:"y", data: stockSeries, defaultOn:true },
 	  { id:"propertyEquity", label:"Property equity (total)", axis:"y", data: equitySeries, defaultOn:true },
 
-	  ...(fireIncomeProxySeries ? [{ id:"fireIncomeProxy", label:"Passive income (monthly)", axis:"y2", data: fireIncomeProxySeries, defaultOn:true }] : []),
+
 	  ...(fireTargetSeries ? [{ id:"fireTarget", label:"FIRE target (monthly)", axis:"y2", data: fireTargetSeries, defaultOn:true }] : []),
 
 	  ...(netRentSeries ? [{ id:"netRent", label:"Net rent (total)", axis:"y2", data: netRentSeries, defaultOn:false }] : []),
 	  ...(taxSeries ? [{ id:"taxPaid", label:"Tax paid", axis:"y2", data: taxSeries, defaultOn:false }] : []),
+		...(passiveIncomeSeries ? [{id:"passiveIncome",label:"Passive income (monthly)",axis:"y2",data: passiveIncomeSeries,defaultOn:true}] : []),		
+	...(withdrawalsSeries ? [{id:"withdrawals",label:"Withdrawals (monthly)", axis:"y2", data: withdrawalsSeries,  defaultOn:false}] : []),
+
 	];
 
 
@@ -1645,7 +1671,7 @@ function setChartPreset(which){
     for(const id of ids) state.chartToggles[id] = true;
   } else {
     // key
-    const keySet = new Set(["netWorth","cash","stocks","propertyEquity","fireTarget","fireIncomeProxy"]);
+    const keySet = new Set(["netWorth","cash","stocks","propertyEquity","fireTarget","passiveIncome"]);
     for(const id of ids) state.chartToggles[id] = keySet.has(id);
   }
 
