--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@ let state = {
     stocks: true,
     propertyEquity: true,
     fireTarget: true,
-    passiveIncome: fault,
+    passiveIncome: false,
     netRent: false,
     taxPaid: false,
 	superBalance: false,
